# liber

./: Cargo.toml  LICENSE  README.md  content.go  content_test.go  epub.go  epub_test.go  go.mod  go.sum  metadata.go  metadata_test.go
body/: body.go
examples/basic/: main.go
examples/custom/: main.go
examples/custom/files/: ch1.xhtml  styles.css
ident/: identifier.go
internal/epub/: content.go  content_reference.go  content_reference_test.go  content_test.go  epub.go  epub_test.go
internal/output/: creator.go  creator_test.go
internal/output/files/: file_content.go  format.go  format_test.go
internal/output/files/parser/: parser.go  parser_test.go
lang/: language.go
reftype/: reftype.go
resource/: resource.go
src/output/: file_content.rs
