[package]
name = "liber"
version = "0.1.2"
edition = "2024"
description = "Rust library for creating (sync/async) EPUB files"
authors = ["Javier Orfo <javierorfo@protonmail.com>"]
license = "MIT"
repository = "https://github.com/javiorfo/liber"
homepage = "https://github.com/javiorfo/liber#readme"
keywords = ["epub", "epub2", "epub-generator", "epub-creator", "epub-async"]

[lib]
name = "liber"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["std"] }
quick-xml = "0.38.3"
thiserror = "2.0.12"
uuid = { version = "1.18.1", features = ["v4"] }
zip = "5.1.1"
async_zip = { version = "0.0.18", features = ["tokio", "deflate"], optional = true }
tokio = { version = "1.47.1", features = ["fs", "io-util", "io-std"], optional = true }
futures = { version = "0.3.31", optional = true }

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
async = ["async_zip", "tokio", "futures"]

[[example]]
name = "async"
required-features = ["async"]

[[example]]
name = "basic"
